--- a/static/css/main.css
+++ b/static/css/main.css
@@ -102,14 +102,14 @@ div.marks .mark .comment {
     margin-right: 40px;
     word-wrap: break-word;
 }
-#participant-input {
+.participant-input {
     padding: 0;
 }
-#participant-input button {
+.participant-input button {
     border: none;
     border-radius: 0;
 }
-#participant-input input {
+.participant-input input {
     border-top-left-radius: 0;
     border-top: none;
     border-left: none;
